# graphqomb-studio

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml  ruff.toml
backend/src/: __init__.py  cli.py  main.py
backend/src/models/: __init__.py  dto.py
backend/src/routers/: __init__.py  flow.py  imports.py  ptn.py  schedule.py  validate.py
backend/src/services/: __init__.py  converter.py  graphqomb_api.py  graphqomb_compat.py  import_sessions.py  ptn.py  ptn_import.py
backend/tests/: __init__.py  test_dto.py  test_flow.py  test_health.py  test_ptn.py  test_ptn_import.py  test_schedule.py  test_schedule_validate.py  test_validate.py
frontend/: Dockerfile  biome.json  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
frontend/src/__tests__/: CustomEdge.test.tsx  FileMenu.test.tsx  GraphCanvas2D.test.tsx  TimelineView.test.tsx  api.test.ts  edgeUtils.test.ts  import-token.test.tsx  layout-resizing.test.tsx  rhg-generator.test.ts  scheduleEditorStore.test.ts  scheduleVisualization.test.ts  setup.ts  useResolvedFlow.test.tsx  validation.test.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/canvas/: CustomEdge.tsx  CustomNode.tsx  FlowOverlay.tsx  FlowOverlay3D.tsx  GhostNode.tsx  GraphCanvas2D.tsx  GraphCanvas3D.tsx  TilingPreview2D.tsx  WorkingPlaneGrid.tsx
frontend/src/components/dialogs/: Tiling3DDialog.tsx
frontend/src/components/ftqc/: FTQCModal.tsx
frontend/src/components/panels/: EdgeProperties.tsx  FlowEditor.tsx  MeasBasisEditor.tsx  NodeProperties.tsx  PropertyPanel.tsx
frontend/src/components/panels/NodeEdgeList/: EdgeList.tsx  FTQCList.tsx  ListControls.tsx  NodeEdgeList.tsx  NodeList.tsx  index.ts
frontend/src/components/schedule/: EdgeScheduleTable.tsx  EdgeScheduleTableRow.tsx  MiniTimelineBar.tsx  ScheduleEditor.tsx  ScheduleTable.tsx  ScheduleTableRow.tsx  ScheduleToolbar.tsx  index.ts
frontend/src/components/timeline/: TimelineView.tsx
frontend/src/components/toolbar/: EdgeCreationToolbar.tsx  FileMenu.tsx  GhostRangeSlider.tsx  NodeCreationToolbar.tsx  TilingToolbar.tsx  Toolbar.tsx  ToolbarRow.tsx  ViewControls.tsx  WorkingPlaneControls.tsx  ZSliceSlider.tsx
frontend/src/components/ui/: DropdownMenu.tsx
frontend/src/contexts/: FTQCHighlightContext.tsx
frontend/src/hooks/: useFTQCOperations.ts  useFTQCVisualization.ts  useFlowOperations.ts  useResolvedFlow.ts  useTilingDrag.ts  useWorkingPlane.ts
frontend/src/lib/: api.ts  edgeUtils.ts  ftqcColors.ts  geometry.ts  scheduleVisualization.ts  validation.ts
frontend/src/lib/tiling/: generator.ts  rhg-generator.ts  validation.ts
frontend/src/lib/tiling/presets/: brickwork.json  cubic.json  honeycomb.json  index.ts  rhg.json  square-lattice.json  triangular.json
frontend/src/schemas/: project.ts
frontend/src/stores/: edgeCreationStore.ts  projectStore.ts  resolvedFlowStore.ts  scheduleEditorStore.ts  selectionStore.ts  tilingStore.ts  uiStore.ts
frontend/src/types/: index.ts  react-three-fiber.d.ts  rhg.ts  tiling.ts
