[project]
name = "graphqomb-studio-backend"
version = "0.1.0"
description = "Backend API for GraphQOMB Studio"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "graphqomb>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pyright>=1.1.390",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src"]

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
    # Conflicts with ruff format
    "COM812",
    "COM819",
    "D206",
    "D300",
    "E111",
    "E114",
    "E117",
    "ISC001",
    "ISC002",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "W191",

    # Not necessary for this project
    "AIR",
    "ASYNC",
    "DJ",
    "PD",

    # Manually disabled
    "CPY",     # copyright missing
    "D105",    # undocumented magic method
    "ERA",     # commented-out code
    "FBT",     # boolean-trap
    "FIX",     # fixme
    "PLR0904", # too-many-public-methods
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
docstring-code-format = true

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = [
    "S101",    # `assert` detected
    "SLF001",  # private method
    "PLC2701", # private method
    "PLR2004", # magic value in test
    "D100",
    "D103",
    "D104",
    "D400",
]

[tool.mypy]
strict = true
ignore_missing_imports = true
files = ["src", "tests"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
include = ["src", "tests"]
reportMissingTypeStubs = false
reportUnknownArgumentType = "information"
reportUnknownLambdaType = "information"
reportUnknownMemberType = "information"
reportUnknownParameterType = "information"
reportUnknownVariableType = "information"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
